link_to use for hyperlink

--- a/app/views/employee/_header.html.erb
+++ b/app/views/employee/_header.html.erb
@@ -1,1 +1,8 @@
-
+<table align='center' , border="1" >
+  <tr>
+    <td><%= link_to "Add Employee", controller: "employee" , action: "emp_add" %></td>
+    <td><%= link_to "Search Employee", controller: "employee" , action: "search" %></td>
+    <td><%= link_to "Edit Employee", controller: "employee" , action: "edit_page" %></td>
+    <td><%= link_to "Delete Employee", controller: "employee" , action: "delete_page" %></td>
+  </tr>
+</table>
