--- a/app/views/employee/emp_add.html.erb
+++ b/app/views/employee/emp_add.html.erb
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <%= render partial: "employee/header" %>
+    <!-- <%= render partial: "employee/header" %> -->
     <h1 align='center'>Employee Add </h1>
   <%= form_for :employee,url: {action: 'employee_add'}, method: :get do |f| %>
   <table align='center' border = '1'>
