employee list and crud are working

--- a/app/views/employee/_header.html.erb
+++ b/app/views/employee/_header.html.erb
@@ -2,7 +2,6 @@
   <tr>
     <td><%= link_to "Add Employee", controller: "employee" , action: "emp_add" %></td>
     <td><%= link_to "Search Employee", controller: "employee" , action: "search" %></td>
-    <td><%= link_to "Edit Employee", controller: "employee" , action: "edit_page" %></td>
-    <td><%= link_to "Delete Employee", controller: "employee" , action: "delete_page" %></td>
+    <td><%= link_to "Home", controller: "employee" , action: "emp_home" %></td>
   </tr>
 </table>
