--- a/app/views/employee/employee_update.html.erb
+++ b/app/views/employee/employee_update.html.erb
@@ -5,7 +5,8 @@
     <title></title>
   </head>
   <body>
-    <h1 align='center'>Employee Deleted Successfully</h1>
+    <h1>Employee Update Successfully</h1>
     <%= link_to "Home",controller: "employee",action: "emp_home" %>
+
   </body>
 </html>
