--- a/app/views/employee/search.html.erb
+++ b/app/views/employee/search.html.erb
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1 align='center'>Emplooye Search Form</h1>
-    <%= form_for :employee,url:{action: 'employee_search' }, method: :get do |f| %>
+    <%= form_for :employee,url:{action: 'employee_search' }, method: :post do |f| %>
     <table align='center' border="0.5">
     <tr>
       <td>Employee Name</td>
