--- a/app/views/employee/emp_home.html.erb
+++ b/app/views/employee/emp_home.html.erb
@@ -9,7 +9,7 @@
     <td>Address</td>
     <td colspan="2">Action</td>
   </tr>
-  <% @employee.each do |emp| %>
+  <% @employees.each do |emp| %>
   <tr>
     <td><%= emp[:emp_name] %></td>
     <td><%= emp[:email_id] %></td>
